--- a/Content/Shared/Shared.css
+++ b/Content/Shared/Shared.css
@@ -150,10 +150,6 @@ p {
         font-size: 14px;
     }
 
-    .card {
-        min-height: 365px;
-    }
-
     h1, h2, h3 {
         font-size: 20px;
     }
